# captcha-solver

./: .gitignore  auth.html  build.sh  go.mod  go.sum  loading.html  main.go  main.js  package-lock.json  preload.js
backend/: Cargo.toml
backend/src/: main.rs
server/: .gitignore  app.db-journal  go.mod  main.go
server/internal/config/: config.go
server/internal/data/: redirect.go  regenerate.go
server/internal/db/: db.go
server/internal/handlers/: admin.go  api.go  auth.go  captcha.go  client.go  task.go  websocket.go
server/internal/middleware/: api.go  auth.go  role.go
server/internal/models/: task.go  user.go
server/internal/rabbitmq/: rabbitmq.go
server/internal/routes/: routes.go
server/internal/utils/: utils.go
server/views/: captcha.html  index.html  layout.html  login.html  result.html  solve-queue.html
server/views/admin/: dashboard.html  tasks.html  users.html
views/: layout.html
worker-client/: .gitignore  Readme.md  auth.html  captcha.html  main.js  menu.html  package-lock.json  package.json  preload.js  renderer.js
worker-client/backend/src/: main.rs
