[package]
name = "captcha_cli"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.44.1", features = ["full"] }
futures-util = "0.3.31"
async-tungstenite = { version = "0.29.1", features = ["tokio-native-tls"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
reqwest = { version = "0.12.15", features = ["json"] }
